Bug fix 1) Align control buttons for ArtBul 2) Fix directions for buttons for ArtBul

--- a/artbul-control-feature/src/main/assets/main.css
+++ b/artbul-control-feature/src/main/assets/main.css
@@ -122,7 +122,6 @@ button:hover {
 #button-controls button {
   font-size: 20px;
   padding: 12px 20px;
-  margin: 5px;
   border: none;
   border-radius: 10px;
   background-color: #444;
@@ -138,12 +137,12 @@ button:hover {
   display: grid;
   flex-direction: column;
   align-items: center;
-  gap: 12px;
+  gap: 6px;
 }
 
 .control-grid .row {
   display: flex;
-  gap: 12px;
+  gap: 6px;
 }
 
 .control-grid .row.center {
@@ -151,7 +150,7 @@ button:hover {
 }
 .grid-item {
   padding: 14px 20px;
-  min-width: 110px;
+  min-width: 100px;
 }
 
 .control-grid button {
